--- a/package.json
+++ b/package.json
@@ -5,25 +5,35 @@
     "build": "gridsome build",
     "develop": "gridsome develop",
     "explore": "gridsome explore",
-    "lint": "eslint --ext .js,.vue src/ --fix"
+    "lint": "eslint --ext .js,.vue,.ts src/ --fix"
   },
   "dependencies": {
-    "gridsome": "^0.7.14"
+    "gridsome": "^0.7.14",
+    "vue": "^2.6.11",
+    "vue-meta": "^2.3.3",
+    "vue-property-decorator": "^8.4.2",
+    "vue-router": "^3.1.6"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^2.30.0",
+    "@typescript-eslint/parser": "^2.30.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-gridsome": "^1.4.9",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
+    "gridsome-plugin-typescript": "^0.4.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.2",
     "node-sass": "^4.14.0",
     "sass-loader": "^8.0.2",
+    "ts-loader": "^7.0.2",
+    "typescript": "^3.8.3",
     "vue-eslint-parser": "^7.0.0"
   },
   "husky": {
@@ -33,11 +43,7 @@
     }
   },
   "lint-staged": {
-    "*.js": [
-      "yarn lint",
-      "git add"
-    ],
-    "*.vue": [
+    "*.(vue|ts|js)": [
       "yarn lint",
       "git add"
     ]
