--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lint-staged": "^10.2.2",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
+    "style-resources-loader": "^1.3.3",
     "ts-loader": "^7.0.3",
     "typescript": "^3.8.3",
     "vue-eslint-parser": "^7.0.0"
