chore: improve environment config
* Replace ~ alias by @ for src directory
* Improve import for typescript definitions files (.d.ts)
* Improve ESLint config
* Ignore the git directory for blog-content

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,9 @@
     "module": "es6",
     "allowJs": true,
     "moduleResolution": "node",
+    "esModuleInterop": true,
+    "stripInternal": true,
+    "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "noImplicitAny": true,
     "noImplicitReturns": true,
@@ -11,19 +14,19 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": [
-        "src/*"
-      ],
       "@/*": [
         "src/*"
       ]
     },
   },
   "include": [
-    "src/**/*",
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "tests/**/*.ts",
+    "tests/**/*.tsx"
   ],
   "exclude": [
-    "node_modules",
-    "**/*.spec.ts"
+    "node_modules"
   ]
 }
