--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint:fix": "yarn lint --fix"
   },
   "dependencies": {
+    "@gridsome/source-filesystem": "^0.6.2",
+    "@gridsome/transformer-remark": "^0.5.0",
     "gridsome": "^0.7.14",
+    "gridsome-plugin-remark-shiki": "^0.3.1",
+    "remark-attr": "^0.11.1",
+    "unist-util-visit": "^2.0.2",
     "vue": "^2.6.11",
     "vue-meta": "^2.3.3",
     "vue-property-decorator": "^8.4.2",
