--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gridsome-plugin-remark-shiki": "^0.3.1",
     "remark-attr": "^0.11.1",
     "unist-util-visit": "^2.0.2",
+    "lodash.debounce": "^4.0.8",
     "vue": "^2.6.11",
     "vue-meta": "^2.3.3",
     "vue-property-decorator": "^8.4.2",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@types/lodash.debounce": "^4.0.6",
     "@typescript-eslint/eslint-plugin": "^3.0.1",
     "@typescript-eslint/parser": "^3.0.1",
     "babel-eslint": "^10.1.0",
