--- a/package.json
+++ b/package.json
@@ -12,38 +12,39 @@
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.6.0",
     "date-fns": "^2.14.0",
-    "gridsome": "^0.7.15",
+    "gridsome": "^0.7.17",
     "gridsome-plugin-remark-shiki": "^0.3.1",
     "lodash.debounce": "^4.0.8",
     "remark-attr": "^0.11.1",
     "unist-util-visit": "^2.0.2",
     "vue": "^2.6.11",
-    "vue-meta": "^2.3.4",
-    "vue-property-decorator": "^8.4.2",
-    "vue-router": "^3.3.2"
+    "vue-class-component": "^7.2.3",
+    "vue-meta": "^2.4.0",
+    "vue-property-decorator": "^8.5.0",
+    "vue-router": "^3.3.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@types/lodash.debounce": "^4.0.6",
-    "@typescript-eslint/eslint-plugin": "^3.0.2",
-    "@typescript-eslint/parser": "^3.0.2",
+    "@typescript-eslint/eslint-plugin": "^3.3.0",
+    "@typescript-eslint/parser": "^3.3.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.1.0",
-    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb-base": "^14.2.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-gridsome": "^1.4.12",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-vue": "^6.2.2",
     "gridsome-plugin-typescript": "^0.4.0",
     "husky": "^4.2.5",
-    "lint-staged": "^10.2.7",
+    "lint-staged": "^10.2.10",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "style-resources-loader": "^1.3.3",
     "ts-loader": "^7.0.5",
-    "typescript": "^3.9.3",
+    "typescript": "^3.9.5",
     "vue-eslint-parser": "^7.1.0"
   },
   "husky": {
