--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.6.0",
     "date-fns": "^2.14.0",
+    "dotenv": "^8.2.0",
     "gridsome": "^0.7.17",
     "gridsome-plugin-remark-shiki": "^0.3.1",
     "lodash.debounce": "^4.0.8",
