--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gridsome-plugin-remark-shiki": "^0.3.1",
     "lodash.debounce": "^4.0.8",
     "remark-attr": "^0.11.1",
+    "remark-containers": "^1.1.2",
     "unist-util-visit": "^2.0.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
