--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.6.1",
+    "@gridsome/vue-remark": "^0.2.4",
     "date-fns": "^2.14.0",
     "dotenv": "^8.2.0",
     "gridsome": "^0.7.19",
