--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,6 @@
     "static-query": "graphql"
   },
   "typescript.tsdk": "node_modules/typescript/lib",
+  "i18n-ally.localesPaths": "src/locales",
+  "i18n-ally.keystyle": "nested",
 }
